log
Wed, Mar 19, 2025  9:26:05 AM: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|4
total_score: 10/70
3f6cb15
Wed, Mar 19, 2025 10:13:22 AM: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:67:7: error: invalid operands to binary * (have 'int' and 'int *')
       sum += *numero
              ~~~~~~~
       *numero = next(L);
       ^
Compilation failed
ec5cb4f
Wed, Mar 19, 2025 10:14:02 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:67:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       (*numero) = next(L);
                 ^
cc1.exe: all warnings being treated as errors
Compilation failed
df6b7a9
Wed, Mar 19, 2025 10:15:27 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
94e339c
 tests:  2|0
total_score: 20/70
11bd354
Wed, Mar 19, 2025 10:42:10 AM: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:89:16: error: comparison between pointer and integer [-Werror]
       if (dato == elem)
                ^~
exercises.c:91:21: error: passing argument 1 of 'popCurrent' from incompatible pointer type [-Werror=incompatible-pointer-types]
          popCurrent(dato);
                     ^~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:32:7: note: expected 'List * {aka struct List *}' but argument is of type 'int *'
 void *popCurrent(List *L);
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7866fdc
Wed, Mar 19, 2025 10:54:44 AM: 
 exercises.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 40/70
f923240
Thu, Mar 20, 2025 12:42:54 AM: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:110:26: error: implicit declaration of function 'createStack' [-Werror=implicit-function-declaration]
    Stack* pilaAuxiliar = createStack();
                          ^~~~~~~~~~~
exercises.c:110:26: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
exercises.c:110:11: error: unused variable 'pilaAuxiliar' [-Werror=unused-variable]
    Stack* pilaAuxiliar = createStack();
           ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2ab22e9
